<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="com.example.devicemanager.presentation.device_list.DeviceListStateEnum" />

        <variable
            name="viewModel"
            type="com.example.devicemanager.presentation.device_list.DeviceListViewModel" />

        <variable
            name="adapter"
            type="com.example.devicemanager.presentation.device_list.components.DeviceListAdapter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".presentation.device_list.DeviceListFragment">

        <ImageButton
            android:id="@+id/menu_button"
            android:layout_width="55dp"
            android:layout_height="66dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="1dp"
            android:contentDescription="@string/content_description_menu"
            android:onClick="@{()-> viewModel.onMenu()}"
            android:src="@drawable/ic_baseline_sort_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="0dp"
            android:hint="@string/search_hint"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toStartOf="@id/menu_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconContentDescription="@string/content_description_search"
            app:startIconDrawable="@drawable/ic_baseline_search_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="50"
                android:text="@={viewModel.mutableSearchText}" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/count_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@{@plurals/itemCount(viewModel.state.devices.size, viewModel.state.devices.size)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_text"
            tools:text="100 items" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            style="@style/TextAppearance.Material3.DisplaySmall"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/count_text_view"
            app:submitList="@{viewModel.state.devices}"
            tools:listitem="@layout/device_list_item" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:orientation="vertical"
            android:padding="10dp"

            android:background="@drawable/bg_card"
            android:visibility="@{viewModel.state.error.empty ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textview_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:maxWidth="200dp"
                android:text="@{viewModel.state.error}"
                android:textColor="@color/design_default_color_error"
                tools:text="error message" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.retryConnection()}"
                android:text="@string/retry_connection" />
        </LinearLayout>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.state.value == DeviceListStateEnum.LOADING || viewModel.state.value == DeviceListStateEnum.SEARCHING  ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>